[package]
name = "sokoban-rs"
version = "0.1.20"
edition = "2021"

authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
description = "A sokoban with solver."
repository = "https://github.com/ShenMian/sokoban-rs"
keywords = ["sokoban", "sokoban-solver"]
categories = ["games"]

[dependencies]
soukoban = { git = "https://github.com/ShenMian/soukoban" }
bitflags = "2.9"
nalgebra = "0.33"
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
arboard = "3.4"                                             # System clipboard
image = "0.25"
toml = "0.8"
dirs = "6"

bevy = "0.16"
leafwing-input-manager = "0.17"
bevy_kira_audio = "0.23"
benimator = "4.1"
winit = "0.30"                  # The version needs to be consistent with the one used in bevy

[build-dependencies]
fs_extra = "1.2"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"
